[package]
name = "futures-lite"
version = "1.1.0"
authors = [
  "Stjepan Glavina <stjepang@gmail.com>",
  "Contributors to futures-rs",
]
edition = "2018"
description = "A lightweight async prelude"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/futures-lite"
homepage = "https://github.com/stjepang/futures-lite"
documentation = "https://docs.rs/futures-lite"
keywords = ["asynchronous", "futures", "async"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[features]
default = ["std"]
std = ["fastrand", "futures-io", "parking"]

[dependencies]
fastrand = { version = "1.3.4", optional = true }
futures-core = { version = "0.3.5", default-features = false }
futures-io = { version = "0.3.5", optional = true }
memchr = "2.3.3"
parking = { version = "2.0.0", optional = true }
pin-project-lite = "0.1.7"
waker-fn = "1.0.0"
