[package]
name = "futures-lite"
version = "1.11.3"
authors = [
  "Stjepan Glavina <stjepang@gmail.com>",
  "Contributors to futures-rs",
]
edition = "2018"
description = "Futures, streams, and async I/O combinators"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/futures-lite"
homepage = "https://github.com/stjepang/futures-lite"
documentation = "https://docs.rs/futures-lite"
keywords = ["asynchronous", "futures", "async"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[features]
default = ["std"]
std = ["alloc", "fastrand", "futures-io", "parking", "memchr/std", "waker-fn"]
alloc = []

[dependencies]
fastrand = { version = "1.3.4", optional = true }
futures-core = { version = "0.3.5", default-features = false }
futures-io = { version = "0.3.5", optional = true }
memchr = { version = "2.3.3", default-features = false }
parking = { version = "2.0.0", optional = true }
pin-project-lite = "0.2.0"
waker-fn = { version = "1.0.0", optional = true }

[dev-dependencies]
spin_on = "0.1.0"
