[package]
name = "futures-lite"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.13.0"
authors = [
  "Stjepan Glavina <stjepang@gmail.com>",
  "Contributors to futures-rs",
]
edition = "2018"
rust-version = "1.40"
description = "Futures, streams, and async I/O combinators"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/futures-lite"
homepage = "https://github.com/smol-rs/futures-lite"
documentation = "https://docs.rs/futures-lite"
keywords = ["asynchronous", "futures", "async"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[features]
default = ["std"]
std = ["alloc", "v2/std"]
alloc = ["v2/alloc"]

[dependencies]
futures-core = { version = "0.3.5", default-features = false }
pin-project-lite = "0.2.0"

[dependencies.v2]
package = "futures-lite"
version = "2.0.0"
default-features = false
features = ["race"]

[dev-dependencies]
spin_on = "0.1.0"
